fix about me alignment on mobile

--- a/src/app/pages/about/about.component.scss
+++ b/src/app/pages/about/about.component.scss
@@ -49,8 +49,6 @@
         }
 
         .description {
-          text-align: center;
-
           &:first-of-type {
             margin-top: $size32;
           }
